# advent-of-code-2025

./: .bazelrc  .gitignore  BUILD  Cargo.toml  MODULE.bazel  README.bazel.md  discover_bazel_rust_project.sh
src/: BUILD  day_1.rs  main.rs
tools/: BUILD
tools/format/: BUILD
tools/lint/: linters.bzl
