# Currently bazel-lib is only load()ed when platforms is used.
bazel_dep(name = "bazel_lib", version = "3.0.0")
bazel_dep(name = "aspect_rules_lint", version = "1.10.2")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_multitool", version = "1.9.0")
bazel_dep(name = "bazel_env.bzl", version = "0.5.0")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.5.1")

# Bazel 9: Ensure transitives don't depend on rules_nodejs prior to
# https://github.com/bazel-contrib/rules_nodejs/commit/1fc6b6b763c4f79994edc9edab10399f7446d8be
bazel_dep(name = "rules_nodejs", version = "6.6.2")

# We have to take a dependency on rules_python in order to set bootstrap=script
# for transitive dependencies, even if there are no Python rules used in this repo.
# See .bazelrc
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_rust", version = "0.63.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "platforms", version = "1.0.0")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:tools.lock.json")
use_repo(multitool, "multitool")

#########################
# Support for Rust, see https://github.com/bazelbuild/rules_rust
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.75.0"],
)
